--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,7 +215,14 @@ button {
 }
 
 /* Change background header */
+.scroll-header{
+  background-color: var(--body-color);
+  box-shadow: 0 1px 34px hsla(228, 4%, 15%, .1);
+}
 
+.scroll-header .nav__logo{
+  color: var(--first-color);
+}
 
 /* Active link */
 
@@ -345,7 +352,22 @@ button {
 }
 
 /*=============== LOGOS ===============*/
+.logos__container{
+  padding-top: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem 2rem;
+  justify-content: center;
+}
 
+.logos__img{
+  height: 60px;
+  opacity: .2;
+  transition: .3s;
+}
+
+.logos__img img:hover{
+  opacity: .6;
+}
 
 /*=============== POPULAR ===============*/
 
