--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,10 +68,13 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  transition: .3s; /* For animation dark mode */
+  transition: .3s;
+  /* For animation dark mode */
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
@@ -139,11 +142,12 @@ button {
 }
 
 .main {
-  overflow: hidden; /* For the animations ScrollReveal*/
+  overflow: hidden;
+  /* For the animations ScrollReveal*/
 }
 
 /*=============== HEADER & NAV ===============*/
-.header{
+.header {
   position: fixed;
   top: 0;
   left: 0;
@@ -153,14 +157,14 @@ button {
   transition: .5s;
 }
 
-.nav{
+.nav {
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nav__logo{
+.nav__logo {
   color: #fff;
   display: inline-flex;
   align-items: center;
@@ -169,16 +173,16 @@ button {
   transition: .3s;
 }
 
-.nav__logo i{
+.nav__logo i {
   font-size: 1rem;
 }
 
-.nav__logo:hover{
+.nav__logo:hover {
   color: var(--first-color);
 }
 
-@media screen and (max-width: 1023px){
-  .nav__menu{
+@media screen and (max-width: 1023px) {
+  .nav__menu {
     position: fixed;
     bottom: 2rem;
     background-color: var(--container-color);
@@ -192,35 +196,35 @@ button {
     transition: .4s;
   }
 
-  .nav__list{
+  .nav__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
-  .nav__link{
+  .nav__link {
     color: var(--text-color);
     display: flex;
     padding: .5rem;
     border-radius: 50%;
   }
 
-  .nav__link i{
+  .nav__link i {
     font-size: 1.25rem;
   }
 
-  .nav__link span{
+  .nav__link span {
     display: none;
   }
 }
 
 /* Change background header */
-.scroll-header{
+.scroll-header {
   background-color: var(--body-color);
   box-shadow: 0 1px 34px hsla(228, 4%, 15%, .1);
 }
 
-.scroll-header .nav__logo{
+.scroll-header .nav__logo {
   color: var(--first-color);
 }
 
@@ -228,34 +232,35 @@ button {
 
 
 /*=============== HOME ===============*/
-.home{
+.home {
   background: linear-gradient(170deg, hsl(0, 0%, 22%) 0%, hsl(0, 0%, 6%) 30%);
   padding-bottom: 0;
 }
 
-.home__container{
+.home__container {
   padding-top: 4rem;
   row-gap: 3.5rem;
 }
 
-.home__title, .home__value-number{
+.home__title,
+.home__value-number {
   color: #ffffff;
 }
 
-.home__title{
+.home__title {
   font-size: var(--biggest-font-size);
   line-height: 120%;
   margin-bottom: 1.25rem;
 }
 
-.home__description{
+.home__description {
   color: var(--text-color-light);
   font-size: var(--normal-font-size);
   margin-bottom: 2rem;
   line-height: 150%;
 }
 
-.home__search{
+.home__search {
   background-color: var(--body-color);
   padding: .35rem .35rem .35rem .75rem;
   display: flex;
@@ -265,57 +270,57 @@ button {
   margin-bottom: 2rem;
 }
 
-.home__search i{
+.home__search i {
   font-size: 1.25rem;
   color: var(--first-color);
 }
 
-.home__search-input{
+.home__search-input {
   width: 90%;
   background-color: var(--body-color);
   color: var(--text-color);
   margin: 0 .5rem;
 }
 
-.home__search-input::placeholder{
+.home__search-input::placeholder {
   color: var(--text-color-light);
 }
 
-.home__value{
+.home__value {
   display: flex;
   column-gap: 2.5rem;
 }
 
-.home__value-number{
+.home__value-number {
   font-size: var(--h1-font-size);
   font-weight: var(--font-medium);
 }
 
-.home__value-number span{
+.home__value-number span {
   color: var(--second-color);
 }
 
-.home__value-description{
+.home__value-description {
   display: flex;
   color: var(--text-color-light);
   font-size: var(--small-font-size);
   line-height: normal;
 }
 
-.home__images{
+.home__images {
   position: relative;
   display: flex;
   justify-content: center;
 }
 
-.home__orbe{
+.home__orbe {
   width: 265px;
   height: 284px;
   background: linear-gradient(180deg, hsl(0, 0%, 16%) 93%, hsl(0, 0%, 67%) 100%);
   border-radius: 135px 135px 0 0;
 }
 
-.home__img{
+.home__img {
   position: absolute;
   width: 250px;
   height: 300px;
@@ -328,7 +333,7 @@ button {
 }
 
 /*=============== BUTTON ===============*/
-.button{
+.button {
   display: inline-block;
   background: linear-gradient(101deg, hsl(228, 66%, 53%), hsl(228, 66%, 47%));
   color: #fff;
@@ -341,39 +346,101 @@ button {
   cursor: pointer;
 }
 
-.button:hover{
+.button:hover {
   box-shadow: 0 4px 8px hsl(228, 66%, 45%, .25);
   background: linear-gradient(101deg, hsl(0, 0%, 90%), hsl(0, 0%, 100%));
   color: hsl(228, 66%, 45%);
 }
 
-.nav__button{
+.nav__button {
   display: none;
 }
 
 /*=============== LOGOS ===============*/
-.logos__container{
+.logos__container {
   padding-top: 2rem;
   grid-template-columns: repeat(2, 1fr);
   gap: 3rem 2rem;
   justify-content: center;
 }
 
-.logos__img{
+.logos__img {
   height: 60px;
   opacity: .2;
   transition: .3s;
 }
 
-.logos__img img:hover{
+.logos__img img:hover {
   opacity: .6;
 }
 
 /*=============== POPULAR ===============*/
+.popular__container {
+  padding: 1rem 0 5rem;
+}
 
+.popular__card {
+  width: 290px;
+  background-color: var(--container-color);
+  padding: .5rem .5rem 1.5rem;
+  border-radius: 1rem;
+  margin: 0 auto;
+  transition: .4s;
+}
+
+.popular__img {
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+}
+
+.popular__data{
+  padding: 0 1rem 0 0.5rem;
+}
+.popular__price{
+  font-size: var(--h2-font-size);
+  color: var(--text-color);
+  margin-bottom: .25rem;
+}
+
+.popular__price span{
+  color: var(--second-color);
+}
+
+.popular__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: .75rem;
+}
+
+.popular__description{
+  font-size: var(--small-font-size);
+}
+
+.popular__card:hover{
+  box-shadow: 0 12px 16px hsl(228, 66%, 45%, .2);
+}
 
 /* Swiper class */
-
+.swiper-button-prev::after, .swiper-button-next::after{
+  content: '';
+}
+.swiper-button-prev, .swiper-button-next{
+  top: initial;
+  bottom: 0;
+  width: initial;
+  height: initial;
+  background-color: var(--container-color);
+  border: 2px solid var(--text-color-light);
+  padding: 6px;
+  border-radius: .5rem;
+  font-size: 1.5rem;
+  color: var(--first-color);
+}
+.swiper-button-prev{
+  left: calc(50% - 10rem);
+}
+.swiper-button-next{
+  right: calc(50% - 10rem);
+}
 
 /*=============== VALUE ===============*/
 
