--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -393,37 +393,41 @@ button {
   margin-bottom: 1rem;
 }
 
-.popular__data{
+.popular__data {
   padding: 0 1rem 0 0.5rem;
 }
-.popular__price{
+
+.popular__price {
   font-size: var(--h2-font-size);
   color: var(--text-color);
   margin-bottom: .25rem;
 }
 
-.popular__price span{
+.popular__price span {
   color: var(--second-color);
 }
 
-.popular__title{
+.popular__title {
   font-size: var(--h3-font-size);
   margin-bottom: .75rem;
 }
 
-.popular__description{
+.popular__description {
   font-size: var(--small-font-size);
 }
 
-.popular__card:hover{
+.popular__card:hover {
   box-shadow: 0 12px 16px hsla(228, 66%, 45%, .2);
 }
 
 /* Swiper class */
-.swiper-button-prev::after, .swiper-button-next::after{
+.swiper-button-prev::after,
+.swiper-button-next::after {
   content: '';
 }
-.swiper-button-prev, .swiper-button-next{
+
+.swiper-button-prev,
+.swiper-button-next {
   top: initial;
   bottom: 0;
   width: initial;
@@ -435,32 +439,34 @@ button {
   font-size: 1.5rem;
   color: var(--first-color);
 }
-.swiper-button-prev{
+
+.swiper-button-prev {
   left: calc(50% - 10rem);
 }
-.swiper-button-next{
+
+.swiper-button-next {
   right: calc(50% - 10rem);
 }
 
 /*=============== VALUE ===============*/
-.value__container{
+.value__container {
   row-gap: 3rem;
 }
 
-.value__images{
+.value__images {
   position: relative;
   display: flex;
   justify-content: center;
 }
 
-.value__orbe{
+.value__orbe {
   width: 266px;
   height: 316px;
   border-color: hsl(228, 24%, 97%);
   border-radius: 135px 135px 16px 16px;
 }
 
-.value__img{
+.value__img {
   position: absolute;
   width: 250px;
   height: 300px;
@@ -471,30 +477,30 @@ button {
   box-shadow: 0 16px 32px hsla(228, 66%, 45%, .2);
 }
 
-.value__description{
+.value__description {
   font-size: var(--small-font-size);
   margin-bottom: 2rem;
 }
 
-.value__accordion{
+.value__accordion {
   display: grid;
   row-gap: 1.5rem;
 }
 
-.value__accordion-item{
+.value__accordion-item {
   background-color: var(--body-color);
   border: 2px solid var(--border-color);
   border-radius: .5rem;
   padding: 1rem .75rem;
 }
 
-.value__accordion-header{
+.value__accordion-header {
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
-.value__accordion-icon{
+.value__accordion-icon {
   background-color: var(--first-color-lighten);
   padding: 5px;
   border-radius: .25rem;
@@ -504,11 +510,11 @@ button {
   transition: .3s;
 }
 
-.value__accordion-title{
+.value__accordion-title {
   font-size: var(--small-font-size);
 }
 
-.value__accordion-arrow{
+.value__accordion-arrow {
   display: inline-flex;
   background-color: var(--first-color-lighten);
   padding: .25rem;
@@ -519,34 +525,125 @@ button {
   transition: .5s;
 }
 
-.value__accordion-description{
+.value__accordion-description {
   font-size: var(--smaller-font-size);
   padding: 1.25rem 2.5rem 0 2.75rem;
 }
 
-.value__accordion-content{
+.value__accordion-content {
   overflow: hidden;
   height: 0;
   transition: all .25s ease;
 }
 
 /*Rotate icon and add shadows*/
-.accordion-open{
+.accordion-open {
   box-shadow: 0 12px 32px hsla(228, 66%, 45%, .1);
 }
-.accordion-open .value__accordion-icon{
+
+.accordion-open .value__accordion-icon {
   box-shadow: 0 4px 4px hsla(228, 66%, 45%, .1);
 }
-.accordion-open .value__accordion-arrow{
+
+.accordion-open .value__accordion-arrow {
   box-shadow: 0 2px 4px hsla(228, 66%, 45%, .1);
 }
-.accordion-open .value__accordion-arrow i{
+
+.accordion-open .value__accordion-arrow i {
   transform: rotate(-180deg);
   transition: .5s ease;
 }
 
 /*=============== CONTACT ===============*/
+.contact__container {
+  row-gap: 2rem;
+}
 
+.contact__images {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.contact__orbe {
+  width: 266px;
+  height: 316px;
+  border-color: hsl(228, 24%, 97%);
+  border-radius: 135px 135px 16px 16px;
+}
+
+.contact__img {
+  position: absolute;
+  width: 250px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 125px 125px 12px 12px;
+  inset: 0;
+  margin: auto;
+  box-shadow: 0 16px 32px hsla(228, 66%, 45%, .2);
+}
+
+.contact__description {
+  font-size: var(--small-font-size);
+  margin-bottom: 2rem;
+}
+
+.contact__card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.25rem .75rem;
+}
+
+.contact__card-box {
+  background-color: var(--body-color);
+  border: 2px solid var(--border-color);
+  padding: 1.25rem .75rem;
+  border-radius: .5rem;
+  transition: .3s;
+}
+
+.contact__card-info {
+  display: flex;
+  align-items: flex-start;
+  column-gap: .75rem;
+  margin-bottom: 1.25rem;
+}
+
+.contact__card i {
+  padding: 6px;
+  background-color: var(--first-color-lighten);
+  border-radius: 6px;
+  font-size: 1.25rem;
+  color: var(--first-color);
+}
+
+.contact__card-title {
+  font-size: var(--normal-font-size);
+}
+
+.contact__card-description {
+  font-size: var(--smaller-font-size);
+}
+
+.contact__card-button {
+  font-size: var(--small-font-size);
+  padding: 14px 0;
+  width: 100%;
+  border-radius: .25rem;
+  background: var(--first-color-lighten);
+  color: var(--first-color);
+  font-weight: var(--font-semi-bold);
+  box-shadow: none;
+}
+
+.contact__card-button:hover {
+  background: var(--first-color);
+  color: var(--first-color-lighten);
+}
+
+.contact__card:hover {
+  box-shadow: 0 8px 24px hsla(228, 66%, 45%, .1);
+}
 
 /*=============== SUBSCRIBE ===============*/
 
