--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,33 +100,82 @@ button {
 }
 
 /*=============== THEME ===============*/
-.change-theme{
+.change-theme {
   font-size: 1.25rem;
   color: var(--container-color);
   cursor: pointer;
   transition: .3s;
 }
 
-.change-theme:hover{
+.change-theme:hover {
   color: var(--first-color);
 }
 
 /*========== Variables Dark theme ==========*/
-body.dark-theme{
+body.dark-theme {
   --first-color: hsl(228, 66%, 62%);
   --second-color: hsl(25, 57%, 54%);
   --title-color: hsl(228, 8%, 95%);
   --text-color: hsl(228, 8%, 70%);
   --border-color: hsl(228, 16%, 14%);
   --body-color: hsl(228, 12%, 8%);
-  --container-color:hsl(228, 16%, 12%);
+  --container-color: hsl(228, 16%, 12%);
 }
 
 /*========== 
     Color changes in some parts of 
     the website, in dark theme 
 ==========*/
+.dark-theme .home__search,
+.dark-theme .swiper-button-next,
+.dark-theme .swiper-button-prev {
+  border: 3px solid var(--border-color);
+}
 
+.dark-theme .nav__menu,
+.dark-theme .home__img,
+.dark-theme .popular__card:hover,
+.dark-theme .value__img {
+  box-shadow: none;
+}
+
+.dark-theme .value__orbe,
+.dark-theme .value__accordion-icon,
+.dark-theme .value__accordion-arrow,
+.dark-theme .contact__orbe,
+.dark-theme .contact__card i,
+.dark-theme .contact__card-button,
+.dark-theme .subscribe__container {
+  background-color: var(--container-color);
+}
+
+.dark-theme .scroll-up {
+  color: var(--title-color);
+}
+
+.dark-theme .subscribe__container {
+  border: 6px solid var(--border-color);
+}
+
+.dark-theme .subscribe__button {
+  border: 3px solid var(--title-color);
+}
+
+.dark-theme .subscribe__description {
+  color: var(--text-color);
+}
+
+.dark-theme::-webkit-scrollbar {
+  background-color: hsl(228, 4%, 15%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb {
+  background-color: hsl(228, 4%, 55%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(228, 4%, 85%);
+}
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -241,14 +290,15 @@ body.dark-theme{
   box-shadow: 0 1px 34px hsla(228, 4%, 15%, .1);
 }
 
-.scroll-header .nav__logo, .scroll-header .change-theme {
+.scroll-header .nav__logo,
+.scroll-header .change-theme {
   color: var(--first-color);
 }
 
 
 
 /* Active link */
-.active-link{
+.active-link {
   background: linear-gradient(101deg, hsl(228, 66%, 53%), hsl(228, 66%, 47%));
   color: #fff;
   box-shadow: 0 4px 8px hsla(228, 66%, 45%, .25);
@@ -387,9 +437,9 @@ body.dark-theme{
   justify-content: center;
 }
 
-.logos__img {
+.logos__img img {
   height: 60px;
-  opacity: .25;
+  opacity: .2;
   transition: .1s;
 }
 
@@ -464,11 +514,11 @@ body.dark-theme{
 }
 
 .swiper-button-prev {
-  left: calc(50% - 10rem);
+  left: calc(50% - 5rem);
 }
 
 .swiper-button-next {
-  right: calc(50% - 10rem);
+  right: calc(50% - 5rem);
 }
 
 /*=============== VALUE ===============*/
@@ -776,7 +826,7 @@ body.dark-theme{
   display: flex;
 }
 
-.footer__info{
+.footer__info {
   padding-bottom: 6rem;
   margin-top: 5.5rem;
   flex-direction: column;
@@ -784,35 +834,38 @@ body.dark-theme{
   row-gap: 1.5rem;
 }
 
-.footer__copy, .footer__privacy a{
+.footer__copy,
+.footer__privacy a {
   font-size: var(--smaller-font-size);
   color: var(--text-color);
   font-weight: var(--font-medium);
 }
 
-.footer__privacy{
+.footer__privacy {
   justify-content: center;
   column-gap: 1.25rem;
 }
 
 
 /*=============== SCROLL BAR ===============*/
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: .6rem;
   border-radius: .5rem;
   background-color: hsl(228, 8%, 96%);
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
   border-radius: .5rem;
   background-color: hsl(228, 8%, 64%);
 }
-::-webkit-scrollbar-thumb:hover{
+
+::-webkit-scrollbar-thumb:hover {
   background-color: hsl(228, 8%, 84%);
 }
 
 
 /*=============== SCROLL UP ===============*/
-.scroll-up{
+.scroll-up {
   position: fixed;
   right: 1rem;
   bottom: -35%;
@@ -827,25 +880,379 @@ body.dark-theme{
   transition: .3s;
 }
 
-.scroll-up:hover{
+.scroll-up:hover {
   transform: translateY(-.25rem);
   color: var(--container-color);
 }
 
 
 /* Show Scroll Up*/
-.show-scroll{
+.show-scroll {
   bottom: 8rem;
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 350px) {
+  .container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 
+  .section {
+    padding: 3.5rem 0 1rem;
+  }
+
+  .home {
+    padding-bottom: 0;
+  }
+
+  .contact__card {
+    grid-template-columns: repeat(1, 180px);
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .nav__menu {
+    padding: 1.3rem 1.5rem;
+  }
+
+  .home__value {
+    column-gap: 1.5rem;
+  }
+
+  .home__img {
+    width: 220px;
+    height: 280px;
+  }
+
+  .home__orbe {
+    width: 240px;
+    height: 264px;
+  }
+
+  .logos__container {
+    gap: 2rem 1rem;
+  }
+
+  .popular__card {
+    width: 230px;
+    padding: .5rem .5rem .75rem;
+  }
+
+  .value__img,
+  .contact__img {
+    width: 220px;
+    height: 260px;
+  }
+
+  .value__orbe,
+  .contact__orbe {
+    width: 236px;
+    height: 280px;
+  }
+
+  .subscribe__container {
+    padding: 2rem 1rem;
+  }
+
+  .footer__container {
+    gap: 2.5rem;
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width:576px) {
+  .nav__menu {
+    width: 342px;
+  }
 
+  .home__search {
+    width: 412px;
+  }
+
+  .contact__card {
+    grid-template-columns: repeat(2, 192px);
+    justify-content: center;
+  }
+
+  .footer__content {
+    grid-template-columns: repeat(3, max-content);
+  }
+}
+
+@media screen and (min-width:767px) {
+  .home__container {
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 2rem;
+  }
+
+  .home__orbe {
+    align-self: flex-end;
+  }
+
+  .home__data {
+    padding-bottom: 2rem;
+  }
+
+  .logos__container {
+    grid-template-columns: repeat(4, max-content);
+    justify-content: center;
+  }
+
+  .value__container,
+  .contact__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+  }
+
+  .contact__images {
+    order: 1;
+  }
+
+  .contact__card {
+    justify-content: initial;
+  }
+
+  .subscribe__container {
+    padding: 3rem 10rem;
+  }
+
+  .footer__container {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+  }
+  .footer__links{
+    row-gap: 1rem;
+  }
+
+  .footer__info{
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 2rem;
+  }
+
+}
 
 /* For large devices */
+@media screen and (min-width: 1023px) {
+  .section {
+    padding: 7.5rem 0 1rem;
+  }
 
+  .section__title {
+    font-size: 2.25rem;
+  }
 
+  .section__subtitle {
+    font-size: var(--normal-font-size);
+  }
+
+  .nav {
+    height: calc(var(--header-height)+ 1.5rem);
+  }
+
+  .nav__menu {
+    width: initial;
+    margin-left: auto;
+  }
+
+  .nav__list {
+    display: flex;
+    column-gap: 3rem;
+  }
+
+  .nav__link {
+    color: var(--text-color-light);
+  }
+
+  .nav__link i {
+    display: none;
+  }
+
+  .nav__button {
+    display: inline-block;
+  }
+
+  .active-link {
+    background: none;
+    box-shadow: none;
+    color: var(--first-color);
+    font-weight: var(--font-medium);
+  }
+
+  .change-theme {
+    margin: 0 3rem;
+  }
+
+  .scroll-header .nav__link,
+  .scroll-header .change-theme {
+    color: var(--text-color);
+  }
+
+  .scroll-header .active-link {
+    color: var(--first-color);
+  }
+
+  .home {
+    padding-bottom: 0;
+  }
+
+  .home__container {
+    padding-top: 5rem;
+    column-gap: 2rem;
+  }
+
+  .home__data {
+    padding-bottom: 4rem;
+  }
+
+  .home__title {
+    margin-bottom: 2rem;
+  }
+
+  .home__value {
+    column-gap: 4.5rem;
+  }
+
+  .home__orbe {
+    width: 504px;
+    height: 611px;
+    border-radius: 256px 256px 0 0;
+  }
+
+  .home__img {
+    width: 472px;
+    height: 634px;
+    border-radius: 236px 236px 12px 12px;
+    bottom: -2.5rem;
+  }
+
+  .logos__img img {
+    height: 100px;
+  }
+
+  .popular__container {
+    padding-top: 3rem;
+  }
+
+  .popular__card {
+    width: 320px;
+    padding: 0.75rem 0.75rem 2rem;
+  }
+
+  .popular__data {
+    padding: 0.25rem 0.75rem;
+  }
+
+  .value__container,
+  .contact__container {
+    align-items: flex-start;
+    column-gap: 5rem;
+  }
+
+  .value__orbe,
+  .contact__orbe {
+    width: 501px;
+    height: 641px;
+    border-radius: 258px 258px 16px 16px;
+  }
+
+  .value__img,
+  .contact__img {
+    width: 451px;
+    height: 601px;
+    border-radius: 238px 238px 12px 12px;
+  }
+
+  .value__img img,
+  .contact__img img {
+    max-width: initial;
+    width: 490px;
+  }
+
+  .value__description, .contact__description {
+    font-size: var(--normal-font-size);
+    margin-bottom: 2.5rem;
+  }
+
+  .value__accordion-title {
+    font-size: var(--normal-font-size);
+  }
+
+  .value__accordion-item {
+    padding: 1.25rem 1.25rem 1.25rem 1rem;
+  }
+
+  .value__accordion-description {
+    padding-bottom: 1rem;
+    font-size: var(--small-font-size);
+  }
+
+  .contact__card{
+    grid-template-columns: repeat(2, 200px);
+  }
+  .contact__card-box{
+    padding: 28px 1.5rem 1.5rem;
+  }
+  .subscribe__container{
+    padding: 4rem 10rem 4.5rem;
+    border-radius: 2rem;
+    border: 12px solid var(--first-color-light);
+  }
+  .subscribe__title{
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .subscribe__description{
+    font-size: var(--normal-font-size);
+    padding: 0 8rem;
+  }
+  .subscribe__button{
+    font-size: var(--normal-font-size);
+  }
+
+  .footer__content{
+    grid-template-columns: repeat(4, max-content);
+  }
+  .footer__title{
+    margin-bottom: 1.5rem;
+  }
+  .footer__links{
+    row-gap: 1rem;
+  }
+
+  .footer__info{
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 2rem;
+  }
+
+  .show-scroll{
+    bottom: 3rem;
+    right: 3rem;
+  }
+
+}
+@media screen and (min-width:1040px) {
+  .container{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .home__container{
+    column-gap: 4rem;
+  }
+}
 /* For 2K & 4K resolutions */
+@media screen and (min-width:2048px) {
+  body{
+    zoom:1.5;
+  }
+}
+@media screen and (min-width:3840px) {
+  body{
+    zoom:2.5;
+  }
+}
